@@ -203,6 +203,7 @@ void ScreenManager::Input( const DeviceInput& DeviceI, const InputEventType type
 #include "ScreenNameEntry.h"
 #include "ScreenJukebox.h"
 #include "ScreenOptionsMenu.h"
+#include "ScreenGameplayOptions.h"
 
 #include "ScreenPrompt.h"
 #include "ScreenTextEntry.h"
@@ -256,6 +257,7 @@ Screen* ScreenManager::MakeNewScreen( CString sClassName )
 	else if( 0==stricmp(sClassName, "ScreenNameEntry") )		ret = new ScreenNameEntry;
 	else if( 0==stricmp(sClassName, "ScreenJukebox") )			ret = new ScreenJukebox;
 	else if( 0==stricmp(sClassName, "ScreenOptionsMenu") )		ret = new ScreenOptionsMenu;
+	else if( 0==stricmp(sClassName, "ScreenGameplayOptions") )	ret = new ScreenGameplayOptions;
 	else
 		RageException::Throw( "Invalid Screen class name '%s'", sClassName.GetString() );
 
